accessibility: fix text contrast

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -214,7 +214,7 @@ button span,
   color: white;
   border-radius: 1em;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.6;
   z-index: 1;
 }
 
@@ -305,7 +305,7 @@ button span,
 }
 
 .kingdom .inactive {
-  background-color: dimgray;
+  background-color: rgb(120, 120, 120);
 }
 
 .settings-menu .back-button-container {
@@ -379,7 +379,6 @@ button span,
   position: absolute;
   font-size: 7vh;
   transform: rotate(-90deg) translate(-8vh, -3vh);
-  opacity: 0.8;
 }
 
 .play-title,
@@ -487,8 +486,8 @@ button span,
 }
 
 .active.waiting {
-  border: 3px solid dimgray;
-  background-color: dimgray;
+  border: 3px solid rgb(120, 120, 120);
+  background-color: rgb(120, 120, 120);
 }
 
 .controls {
@@ -528,7 +527,7 @@ button span,
 }
 
 .waiting .next-phase {
-  background-color: dimgray;
+  background-color: rgb(120, 120, 120);
   font-weight: normal;
   -webkit-animation: none;
   -moz-animation: none;
@@ -554,15 +553,15 @@ button span,
 }
 
 .hand .cant-play.card {
-  background-color: dimgray;
+  background-color: rgb(120, 120, 120);
 }
 
 .supply .cant-buy .card {
-  background-color: dimgray;
+  background-color: rgb(120, 120, 120);
 }
 
 .supply.active {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .supply.active .can-buy .card {
@@ -570,7 +569,7 @@ button span,
 }
 
 .supply.inactive {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .supply.inactive .can-buy .card {
